templates/Ansible-TowerVPC-RDS_QuickStart.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Create the Amazon EC2 instances for the Ansible Quick Start.",
	"Parameters": {
		"KeyPairName": {
			"Description": "Public/private key pair",
			"Type": "AWS::EC2::KeyPair::KeyName"
		},
		"DBName": {
	       		     "Description": "Database Name",
	       		     "Type": "String",
	       		     "Default": "DBAnsibleTower"
	        },    
	        "DBPassword": {
	       		     "Description": "Database Password",
	       		     "Type": "String",
	       		     "Default": "DBPassword"
	        },
	        "DBUser": {
	       		     "Description": "Database User",
	       		     "Type": "String",
	       		     "Default": "DBUser"
	        },
	        "DBClass": {
	       		     "Description": "DBClass",
	       		     "Type": "String",
	       		     "Default": "db.t2.micro"
	        },
	        "MultiAZDatabase": {
	       		   "Description": "MultiAZDatabase",
	       		   "Type": "String",
	       		   "Default": "false"
	        },
	        "DBAllocatedStorage": {
	         	 "Description": "DBAllocatedStorage",
	         	 "Type": "Number",
	        	 "Default": "10"
	        },
                "SubnetCIDR"  : {
            		 "Description" : "CIDR block for the public subnet",
            		 "Type"        : "String",
           		 "Default"     : "10.0.0.0/19",
            	         "AllowedPattern" : "[a-zA-Z0-9]+\\..+"
        	},
		"RemoteAdminCIDR": {
			"Description": "CIDR Block or IP for SSH",
			"Type": "String",
			"Default": "0.0.0.0/0",
			"AllowedPattern": "[a-zA-Z0-9]+\\..+"
		},
		"AnsibleTowerIP": {
			"Description": "IP for the ansible master",
			"Type": "String",
         	        "Default" : "10.0.0.10"

		},
		"AnsibleClientLinuxIP": {
			"Description": "IP for the ansible client",
			"Type": "String",
         	        "Default" : "10.0.0.11"
		},
		"VPCCIDR": {
			"Description": "CIDR Block for the VPC",
			"Type": "String",
			"Default": "10.0.0.0/16",
			"AllowedPattern": "[a-zA-Z0-9]+\\..+"
		}
	},
	"Mappings": {
		"CentOS7": {
			"us-east-1": {
				"64": "ami-6d1c2007"
			},
			"us-west-2": {
				"64": "ami-d2c924b2"
			},
			"us-west-1": {
				"64": "ami-af4333cf"
			},
			"eu-west-1": {
				"64": "#ami-e1398992"
			},
			"eu-central-1": {
				"64": "#ami-d22932be"
			},
			"ap-southeast-1": {
				"64": "#ami-0103cd62"
			},
			"ap-northeast-1": {
				"64": "#ami-59bdb937"
			},
			"sa-east-1": {
				"64": "#ami-f0f4779c"
			},
			"ap-southeast-2": {
				"64": "#ap-11032472"
			}
		}
	},
        "Resources": {
	        "VPC" : {
            "Type" : "AWS::EC2::VPC",
            "Properties" : {
                "CidrBlock" : {
                    "Ref" : "VPCCIDR"
                },
                "EnableDnsHostnames" : "true",
                "Tags"               : [
                    {
                        "Key" : "Application",
                        "Value" : {
                            "Ref" : "AWS::StackName"
                        }
                    },
                    {
                        "Key" : "Network",
                        "Value" : "Public"
                    }
                ]
            }
        },
        "PublicSubnet" : {
            "Type" : "AWS::EC2::Subnet",
            "Properties" : {
                "VpcId" : {
                    "Ref" : "VPC"
                },
                "CidrBlock" : {
                    "Ref" : "SubnetCIDR"
                },
                "MapPublicIpOnLaunch" : "true",
                "AvailabilityZone"    : {
                    "Fn::Select" : [
                        0,
                        {
                            "Fn::GetAZs" : ""
                        }
                    ]
                },
                "Tags"                : [
                    {
                        "Key" : "Application",
                        "Value" : {
                            "Ref" : "AWS::StackName"
                        }
                    },
                    {
                        "Key" : "Network",
                        "Value" : "Public"
                    },
                    {
                        "Key" : "Role",
                        "Value" : "Public Subnet"
                    }
                ]
            }
        },
        "InternetGateway" : {
            "Type" : "AWS::EC2::InternetGateway",
            "Properties" : {
                "Tags" : [
                    {
                        "Key" : "Application",
                        "Value" : {
                            "Ref" : "AWS::StackName"
                        }
                    },
                    {
                        "Key" : "Network",
                        "Value" : "Public"
                    }
                ]
            }
        },
        "AttachGateway"   : {
            "Type" : "AWS::EC2::VPCGatewayAttachment",
            "Properties" : {
                "VpcId" : {
                    "Ref" : "VPC"
                },
                "InternetGatewayId" : {
                    "Ref" : "InternetGateway"
                }
            }
        },
        "PublicRouteTable" : {
            "Type" : "AWS::EC2::RouteTable",
            "Properties" : {
                "VpcId" : {
                    "Ref" : "VPC"
                },
                "Tags"  : [
                    {
                        "Key" : "Application",
                        "Value" : {
                            "Ref" : "AWS::StackName"
                        }
                    },
                    {
                        "Key" : "Network",
                        "Value" : "Public Subnet"
                    }
                ]
            }
        },
        "PublicRoute"      : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
                "RouteTableId" : {
                    "Ref" : "PublicRouteTable"
                },
                "DestinationCidrBlock" : "0.0.0.0/0",
                "GatewayId"            : {
                    "Ref" : "InternetGateway"
                }
            }
        },
        "PublicSubnetRouteTableAssociation" : {
            "Type" : "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
                "SubnetId" : {
                    "Ref" : "PublicSubnet"
                },
                "RouteTableId" : {
                    "Ref" : "PublicRouteTable"
                }
            }
        },
        "HostedZone"                        : {
            "Type" : "AWS::Route53::HostedZone",
            "Properties" : {
                "HostedZoneConfig" : {
                    "Comment" : "Hosted zone for example.com"
                },
                "Name"             : "example.com",
                "VPCs"             : [
                    {
                        "VPCId" : {
                            "Ref" : "VPC"
                        },
                        "VPCRegion" : {
                            "Ref" : "AWS::Region"
                        }
                    }
                ]
            }
        },
        "AnsibleTowerDNSRecord"             : {
            "Type" : "AWS::Route53::RecordSet",
            "DependsOn" : "HostedZone",
            "Properties" : {
                "HostedZoneId" : {
                    "Fn::Join" : [
                        "",
                        [
                            "/hostedzone/",
                            {
                                "Ref" : "HostedZone"
                            }
                        ]
                    ]
                },
                "Name"         : "ansible.example.com",
                "Type"         : "A",
                "TTL"          : "60",
                "ResourceRecords" : [
                    {
                        "Ref" : "AnsibleTowerIP"
                    }
                ]
            }
        },
        "AnsibleClientLinuxDNSRecord"         : {
            "Type" : "AWS::Route53::RecordSet",
            "DependsOn" : "HostedZone",
            "Properties" : {
                "HostedZoneId" : {
                    "Fn::Join" : [
                        "",
                        [
                            "/hostedzone/",
                            {
                                "Ref" : "HostedZone"
                            }
                        ]
                    ]
                },
                "Name"         : "linuxclient.example.com",
                "Type"         : "A",
                "TTL"          : "60",
                "ResourceRecords" : [
                    {
                        "Ref" : "AnsibleClientLinuxIP"
                    }
                ]
            }
        },
	"AnsibleTower": {
			"Type": "AWS::EC2::Instance",
			"Metadata": {
				"AWS::CloudFormation::Init": {
					"config": {
						"packages": {
							"yum": {
								"curl": [],
								"wget": []
							}
						},
						"files": {
							"/etc/cfn/cfn-hup.conf": {
								"content": {
									"Fn::Join": ["", [
										"[main]\n",
										"stack=", {
											"Ref": "AWS::StackId"
										}, "\n",
										"region=", {
											"Ref": "AWS::Region"
										}, "\n"
									]]
								},
								"mode": "000400",
								"user": "root",
								"group": "root"
							},
							"/etc/qsrdsinfo.conf": {
                                                                "content": {
                                                                        "Fn::Join": ["", [
                                                                                "rds_dbname|",{ "Ref" : "DBName" }, "\n",
                                                                                "rds_user|",{ "Ref" : "DBUser" }, "\n",
                                                                                "rds_pass|",{ "Ref" : "DBPassword" }, "\n",
                                                                                "rds_endpoint|",{ "Fn::GetAtt": ["DBInstance","Endpoint.Address"] }, "\n"
                                                                        ]]
                                                                },
                                                                "mode": "000400",
                                                                "user": "root",
                                                                "group": "root"
                                                        }
						}
					}
				}
			},
			"Properties": {
				"ImageId": {
					"Fn::FindInMap": [
						"CentOS7", {
							"Ref": "AWS::Region"
						},
						"64"
					]
				},
				"InstanceType": "t2.medium",
				"NetworkInterfaces": [{
					"DeleteOnTermination": "true",
					"DeviceIndex": 0,
					"SubnetId": {
						"Ref": "PublicSubnet"
					},
					"PrivateIpAddresses": [{
						"Primary": "true",
						"PrivateIpAddress": {
							"Ref": "AnsibleTowerIP"
						}
					}],
					"GroupSet": [{
						"Ref": "AnsibleTowerSecurityGroup"
					}]
				}],
				"Tags": [{
					"Key": "Name",
					"Value": "Ansible"
				}],
				"BlockDeviceMappings": [{
					"DeviceName": "/dev/xvdb",
					"Ebs": {
						"VolumeSize": "50",
						"VolumeType": "gp2"
					}
				}],
				"KeyName": {
					"Ref": "KeyPairName"
				},

				"UserData": {
					"Fn::Base64": {
						"Fn::Join": [
							"", [
								"#!/bin/bash\n",
								"hostname ansibletower.example.com",
								"yum install -y epel-release\n",
								"yum install -y python-daemon\n",
								"yum install -y pystache.noarch\n",
								"yum install -y python-ecdsa\n",
								"yum install -y python-paramiko\n",
								"yum install -y python-keyczar\n",
								"yum install -y python-crypto\n",
								"yum install -y python-httplib\n",
								"yum install  -y https://s3.amazonaws.com/quickstart-cfn-tools/aws-cfn-bootstrap-1.4-8.3.el7.centos.noarch.rpm\n",
								"/opt/aws/bin/cfn-init ",
								" --stack ", { "Ref": "AWS::StackName" },
								" --resource AnsibleTower ",
								" --region ", { "Ref": "AWS::Region" }, 
								"\n",
								"/opt/aws/bin/cfn-signal", " -e $?", " '", { "Ref" : "WaitforCfnTools" },"'","\n",
								"SRC=https://s3.amazonaws.com/dev-quickstart/QS_Ansible/cf_scripts/ansibletower_userdata.sh",
								"\n",
								"curl -L $SRC | bash;",
								"/opt/aws/bin/cfn-signal", " -e $?", " '", { "Ref" : "WaitforAnsibleTowerInstall" },"'","\n",
								"\n",
								"\n"
							]
						]
					}
				}
			},"DependsOn": [ "DBInstance" ]
		},
		
		"WaitforCfnTools": {
			"Type": "AWS::CloudFormation::WaitConditionHandle"
		},
		"CfnWaitCondition": {
			"Type": "AWS::CloudFormation::WaitCondition",
			"DependsOn": "AnsibleTower",
			"Properties": {
				"Handle": {
					"Ref": "WaitforCfnTools"
				},
				"Timeout": "1800"

			}
		},
		"WaitforAnsibleTowerInstall": {
			"Type": "AWS::CloudFormation::WaitConditionHandle"
		},
		"AnsibleTowerWaitCondition": {
			"Type": "AWS::CloudFormation::WaitCondition",
			"DependsOn": "AnsibleTower",
			"Properties": {
				"Handle": {
					"Ref": "WaitforAnsibleTowerInstall"
				},
				"Timeout": "1800"
			}
		},
  		"DBEC2SecurityGroup": {
  		  "Type": "AWS::EC2::SecurityGroup",
  		  "Properties" : {
  		    "GroupDescription": "Open database for access",
  		    "SecurityGroupIngress" : [{
  		      "IpProtocol" : "tcp",
  		      "FromPort" : "5432",
  		      "ToPort" : "5432",
		      "CidrIp": { "Ref": "VPCCIDR" }
  		    }]
  		  }
  		},
  		"DBInstance" : {
  		  "Type": "AWS::RDS::DBInstance",
  		  "Properties": {
  		    "DBName"            : { "Ref" : "DBName" },
  		    "Engine"            : "postgres",
  		    "StorageType"       : "gp2",
  		    "MultiAZ"           : { "Ref": "MultiAZDatabase" },
  		    "MasterUsername"    : { "Ref" : "DBUser" },
  		    "DBInstanceClass"   : { "Ref" : "DBClass" },
  		    "AllocatedStorage"  : { "Ref" : "DBAllocatedStorage" },
  		    "MasterUserPassword": { "Ref" : "DBPassword" },
  		    "VPCSecurityGroups" : [ { "Fn::GetAtt": [ "DBEC2SecurityGroup", "GroupId" ] } ]
		   }
  		 },
		"LinuxClient": {
			"Type": "AWS::EC2::Instance",
			"DependsOn": "AnsibleTower",
			"Properties": {
				"ImageId": {
					"Fn::FindInMap": [
						"CentOS7", {
							"Ref": "AWS::Region"
						},
						"64"
					]
				},
				"InstanceType": "t2.medium",
				"NetworkInterfaces": [{
					"DeleteOnTermination": "true",
					"DeviceIndex": 0,
					"SubnetId": {
						"Ref": "PublicSubnet"
					},
					"PrivateIpAddresses": [{
						"Primary": "true",
						"PrivateIpAddress": {
							"Ref": "AnsibleClientLinuxIP"
						}
					}],
					"GroupSet": [{
						"Ref": "AnsibleClientLinuxSecurityGroup"
					}]
				}],
				"Tags": [{
					"Key": "Name",
					"Value": "LinuxClient"
				}],
				"KeyName": {
					"Ref": "KeyPairName"
				},
				"UserData": {
					"Fn::Base64": {
						"Fn::Join": [
							"", [
								"#!/bin/bash\n",
								"hostname linuxclient.example.com",
								"\n"
							]
						]
					}
				}
			}
		},
		"AnsibleTowerSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Enables access to the Ansible tower",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [{
					"IpProtocol": "tcp",
					"FromPort": "22",
					"ToPort": "22",
					"CidrIp": {
						"Ref": "RemoteAdminCIDR"
					}
				}, {
					"IpProtocol": "tcp",
					"FromPort": "22",
					"ToPort": "22",
					"CidrIp": {
						"Ref": "VPCCIDR"
					}
				}, {
					"IpProtocol": "tcp",
					"FromPort": "443",
					"ToPort": "443",
					"CidrIp": {
						"Ref": "RemoteAdminCIDR"
					}
				}, {
					"IpProtocol": "tcp",
					"FromPort": "80",
					"ToPort": "80",
					"CidrIp": {
						"Ref": "RemoteAdminCIDR"
					}
				}]
			}
		},
		"AnsibleClientLinuxSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Enables access to the ansible communication",
				"VpcId": {
					"Ref": "VPC"
				},
				"SecurityGroupIngress": [{
					"IpProtocol": "tcp",
					"FromPort": "22",
					"ToPort": "22",
					"CidrIp": {
						"Ref": "RemoteAdminCIDR"
					}
				}, {
					"IpProtocol": "tcp",
					"FromPort": "22",
					"ToPort": "22",
					"CidrIp": {
						"Ref": "VPCCIDR"
					}
				}]
			}
		}
	},
	"Outputs": {
		"AnsibleTowerDnsName": {
			"Value": {
				"Fn::GetAtt": [
					"AnsibleTower",
					"PublicDnsName"
				]
			},
			"Description": "Public DNS Name for the Ansible Server"
		},
		"AnsibleClientLinuxDnsName": {
			"Value": {
				"Fn::GetAtt": [
					"LinuxClient",
					"PublicDnsName"
				]
			},
			"Description": "Public DNS Name for the Ansible Linux"
		}
	}
}
